# gitnore

./: .gitignore  LICENSE.md  README.md  juan.py  pyproject.toml  setup.py  test_juan.py
debian/: changelog  control  rules  watch
debian/patches/: ok
