[tool.poetry]
name = "juan"
version = "0.1.0"
description = ""
authors = ["Juan Olvera <juan@jolvera.dev>"]

[tool.poetry.scripts]
"juan" = "juan:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pylint = "^2.13.5"
pyinstaller = "^4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
